--- a/problem/templates/problem/volume.html
+++ b/problem/templates/problem/volume.html
@@ -25,7 +25,7 @@ SOFTWARE.
 {% block body_block %}
 <div class="container" id="Body">
 
-  <h2>Problem Category</h2>
+  <h2>Problem Volume</h2>
   <div style='padding-top: 50px;'>
     <div id='all-problem'>
       <table class="table">
