--- a/problem/templates/problem/editTab/testcase.html
+++ b/problem/templates/problem/editTab/testcase.html
@@ -11,7 +11,7 @@
   </style>
   <tr>
     <th>Input</th>
-    <th>Input</th>
+    <th>Output</th>
     <th>Time Limit</th>
     <th>Memory Limit</th>
     <th></th>
