--- a/problem/templates/problem/edit.html
+++ b/problem/templates/problem/edit.html
@@ -36,7 +36,7 @@ SOFTWARE.
         <a href="#description" role="tab" data-toggle="tab">Description</a>
       </li>
       <li>
-        <a href="#sampio" role="tab" data-toggle="tab">Sample IO</a>
+        <a href="#sample_io" role="tab" data-toggle="tab">Sample IO</a>
       </li>
       <li>
         <a href="#tag" role="tab" data-toggle="tab">Tag</a>
@@ -79,15 +79,15 @@ SOFTWARE.
           CKEDITOR.replace('outText')
           </script>
         </div>
-        <div class="tab-pane" id="sampio">
+        <div class="tab-pane" id="sample_io">
           <div class='panel panel-default' style='float:left;width:47%'>
             <div class='panel-heading'>Sample Input</div>
-            <textarea name='sample_input' class='panel-body' 
+            <textarea name='sample_in' class='panel-body' 
               style='width:100%' rows='20'>{{sample_in}}</textarea>
           </div>
           <div class='panel panel-default' style='float:right;width:47%'>
             <div class='panel-heading'>Sample Output</div>
-            <textarea name='sample_output' class='panel-body' 
+            <textarea name='sample_out' class='panel-body' 
               style='width:100%' rows='20'>{{sample_out}}</textarea>
           </div>
         </div>
