--- a/contest/templates/contest/overview.html
+++ b/contest/templates/contest/overview.html
@@ -27,7 +27,7 @@ SOFTWARE.
     </tr>
   </thead>
   <tbody>
-    {% for problem in contest.problem.all %}
+    {% for problem in scoreboard.problems %}
     <tr>
       <td>{{ forloop.counter }}</td>
       <td><a href="#">{{ problem.pname }}</td>
@@ -36,7 +36,7 @@ SOFTWARE.
             <div name="pass" class="progress-bar progress-bar-success" role="progressbar" 
                  aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
               <span name="pass_ratio">
-                {{ problem_pass_rate.pass|get_value:problem.id }}/{{ contestant_number }}
+                {{ problem|passrate }}
               </span>
             </div>
             <div name="not_pass" class="progress-bar progress-bar-danger" role="progressbar"
