--- a/contest/templates/contest/overview.html
+++ b/contest/templates/contest/overview.html
@@ -36,7 +36,7 @@ SOFTWARE.
             <div name="pass" class="progress-bar progress-bar-success" role="progressbar" 
                  aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
               <span name="pass_ratio">
-                {{ problem|passrate }}
+                {{ problem.pass_user }}/{{ scoreboard.users|length }}
               </span>
             </div>
             <div name="not_pass" class="progress-bar progress-bar-danger" role="progressbar"
