check if contest is open_register or not before register. And won't appear register button if contest is not open_register.

--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -104,7 +104,7 @@ SOFTWARE.
 
           </script>
           {% endif %}
-          {% if user.is_authenticated %}
+          {% if user.is_authenticated and contest.contest.open_register%}
           <a href="{% url 'contest:register' contest.contest.id %}">
             <button type="button" class="btn btn-success btn-xs" >
               <span class="glyphicon glyphicon-plus"></span>
