--- a/contest/templates/contest/editContest.html
+++ b/contest/templates/contest/editContest.html
@@ -32,13 +32,31 @@ SOFTWARE.
     <form action="." method="POST">
         {% csrf_token %}
         {% for field in form %}
-        <div class="form-group">
+        {% if field.label_tag == form.is_homework.label_tag %}
+        <div class="fieldWrapper checkbox">
+            {{ field.errors }}
+             <label>
+                {{ field }}Is homework
+             </label>
+        </div>
+        {% elif field.label_tag == form.open_register.label_tag %}
+        <div class="fieldWrapper checkbox">
+            {{ field.errors }}
+             <label>
+                {{ field }}Open Register
+             </label>
+        </div>
+        {% elif field.label_tag == form.owner.label_tag %}
+        {{ field.as_hidden }}
+        {% else %}
+        <div class="fieldWrapper form-group">
             {{ field.errors }}
             {{ field.label_tag }}
             {{ field }}
         </div>
+        {% endif %}
         {% endfor %}
-        <input class="btn btn-primary" type="submit">
+        <input class="btn btn-primary" type="submit" value="Submit">
     </form>
 </div>
 
