--- a/users/templates/users/confirm.html
+++ b/users/templates/users/confirm.html
@@ -1,4 +1,4 @@
-'''
+<!--
 The MIT License (MIT)
 
 Copyright (c) 2014 NTHUOJ team
@@ -20,33 +20,32 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
-'''
+-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <!-- necessarily jQeuery -->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js">
+  </script>
+  <!-- bootstrap, bootwatch JS & CSS -->
+  <link rel="stylesheet" 
+        href="http://bootswatch.com/paper/bootstrap.css" media="screen">
+  <link rel="stylesheet" 
+        href="http://bootswatch.com/assets/css/bootswatch.min.css">
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js">
+  </script>  
+</head>
+<body>
+  <div class="container" 
+       style="margin-top:50px;margin-bottom:50px;min-height:500px;">
+    <p style="text-align: center;font-size: 75px;">Confirmation Success!</p>
+    <p style="text-align: center;font-size: 30px;margin-top: 50px;">
+      Thank you, {{ username }}. Your registration is now complete.<br>
+      You can go back to <a href={% url "index:index" %}>NTHUOJ index</a> 
+      and start coding or something else.
+    </p>
 
-import os
-
-
-def write_ini_file(host, db, user, pwd):
-    ini_file = open('nthuoj.ini', 'w')
-    ini_file.write('[client]\n')
-    ini_file.write('host = %s\n' % host)
-    ini_file.write('database = %s\n' % db)
-    ini_file.write('user = %s\n' % user)
-    ini_file.write('password = %s\n' % pwd)
-    ini_file.write('default-character-set = utf8\n')
-    ini_file.close()
-
-def write_email_file(pwd):
-    email_file = open('nthucsoj.py', 'w')    
-    email_file.write('EMAIL_HOST_PASSWORD = \'%s\'\n' % pwd)     
-    email_file.close()
-
-def django_manage(args):
-    cmd = 'python ./manage.py ' + args
-    os.system(cmd)
-
-def db_migrate():
-    apps = ['index', 'problem', 'users', 'contest', 'team', 'group']
-    for app in apps:
-        django_manage('makemigrations ' + app)
-    django_manage('migrate')
-
+  </div> 
+</body>
+</html>
